# ARTool

./: CMakeLists.txt  ar.cpp  calibrator.cpp  main.cpp  opencv_calibration.cpp
assets/: camera_calibration.xml  default.xml  out_camera_data.xml
assets/database/: Thumbs.db
assets/shapes/: cube.txt  pyramid.txt  sidepyramid.txt  small_cube.txt
classes/: CameraCalibrator.cpp  CameraCalibrator.h  Database.cpp  Database.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  MarkerDescriptor.cpp  MarkerDescriptor.h  MarkerDetector.cpp  MarkerDetector.h
util/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Shape.cpp  Shape.h  Util.cpp  Util.h
